test/testdata/bool/not_callable_error.lox
true(); // error: 'bool' value is not callable
